--- a/css/style.css
+++ b/css/style.css
@@ -537,6 +537,90 @@ tr{
   width: 300px;
 }
 
+.row {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  margin: 0 -16px;
+}
+
+.col-25 {
+  -ms-flex: 25%;
+  flex: 25%;
+}
+
+.col-50 {
+  -ms-flex: 50%;
+  flex: 50%;
+}
+
+.col-75 {
+  -ms-flex: 75%;
+  flex: 75%;
+}
+
+.col-25,
+.col-50,
+.col-75 {
+  padding: 0 16px;
+}
+
+.container {
+  background-color: #f2f2f2;
+  padding: 5px 20px 15px 20px;
+  border: 1px solid lightgrey;
+  border-radius: 3px;
+}
+
+input[type=text] {
+  width: 100%;
+  margin-bottom: 20px;
+  padding: 12px;
+  border: 1px solid #ccc;
+  border-radius: 3px;
+}
+
+label {
+  margin-bottom: 10px;
+  display: block;
+}
+
+.icon-container {
+  margin-bottom: 20px;
+  padding: 7px 0;
+  font-size: 24px;
+}
+
+.btn {
+  background-color: #04AA6D;
+  color: white;
+  padding: 12px;
+  margin: 10px 0;
+  border: none;
+  width: 100%;
+  border-radius: 3px;
+  cursor: pointer;
+  font-size: 17px;
+}
+
+.btn:hover {
+  background-color: #45a049;
+}
+
+a {
+  color: #2196F3;
+}
+
+hr {
+  border: 1px solid lightgrey;
+}
+
+span.price {
+  float: right;
+  color: grey;
+}
+
 @media(max-width:1100px){
   nav{
     justify-content: space-between;
@@ -627,6 +711,12 @@ tr{
   nav .menu-btn:checked ~ .menu{
     display: block;
   }
+  .row{
+    flex-direction: column-reverse;
+  }
+  .col-25{
+    margin-bottom: 20px;
+  }
 }
 
 @media(max-width:680px){
@@ -656,6 +746,12 @@ tr{
     padding: 0px 20px;
     text-align: center;
   }
+  .row{
+    flex-direction: column-reverse;
+  }
+  .col-25{
+    margin-bottom: 20px;
+  }
 }
 
 @media(max-width:440px){
@@ -671,6 +767,12 @@ tr{
   .search{
     width: 90%;
     height: 40px;
+  }
+  .row{
+    flex-direction: column-reverse;
+  }
+  .col-25{
+    margin-bottom: 20px;
   }
 }
 
@@ -709,5 +811,11 @@ tr{
   }
   .as3 .as7{
     text-align: center;
+  }
+  .row{
+    flex-direction: column-reverse;
+  }
+  .col-25{
+    margin-bottom: 20px;
   }
 }
