--- a/css/style.css
+++ b/css/style.css
@@ -646,7 +646,7 @@ span.price {
   font-size: 14px;
   font-weight: medium;
   letter-spacing: 0.35px;
-  color: #EAEAEA;
+  color: black;
   opacity: 1;
   padding: 12px;
   vertical-align: top;
@@ -657,7 +657,7 @@ span.price {
   font-size: 14px;
   letter-spacing: 0.35px;
   font-weight: normal;
-  color:pink;
+  color:#EAEAEA;
   background-color: #3c3f44;
   padding: 8px;
   text-align: center;
